[project]
name = "mocksafe"
version = "0.4.1-alpha"

description = "A mocking library developed to enable static and runtime type checking of your mocks to keep them in sync with production code."

requires-python = ">= 3.9"
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development :: Testing :: Unit",
    "Framework :: Pytest",
    "Typing :: Typed",
]
keywords = ["mock", "mocking", "typed", "typing", "typesafe", "testing", "tests", "mocks", "magicmock", "unittest", "stubbing"]
dependencies = []

[project.urls]
Documentation = "https://mocksafe.readthedocs.io"
Source = "https://github.com/dmayo3/mocksafe"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.bumpver]
current_version = "0.4.1-alpha"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"mocksafe/__init__.py" = [
    "{version}",
]
"README.rst" = [
    "{version}",
]
