[project]
name = "mocksafe"
version = "0.10.0-beta"

description = "A mocking library developed to enable static and runtime type checking of your mocks to keep them in sync with production code."

requires-python = ">= 3.10"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development :: Testing :: Unit",
    "Framework :: Pytest",
    "Typing :: Typed",
]
keywords = [
    "mock",
    "mocking",
    "typed",
    "typing",
    "typesafe",
    "testing",
    "tests",
    "mocks",
    "magicmock",
    "unittest",
    "stubbing",
]
dependencies = []

[project.urls]
Documentation = "https://mocksafe.readthedocs.io/en/0.10.0-beta/"
Source = "https://github.com/dmayo3/mocksafe"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.setuptools.package-data]
mocksafe = ["py.typed"]

[project.entry-points.pytest11]
mocksafe = "mocksafe.plugin"

[tool.bumpver]
current_version = "0.10.0-beta"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.black]
line-length = 100

# Used by Read The Docs, which doesn't support `uv`
[project.optional-dependencies]
docs = ["sphinx-rtd-theme>=1.5.0", "pytest>=8.4.0"]

[dependency-groups]
dev = [
    "black >= 25.1.0",
    "coverage >= 7.10.0",
    "flake8 >= 7.1.0",
    "flake8-annotations",
    "flake8-bandit",
    "flake8-bugbear",
    "flake8-eradicate",
    "flake8-rst-docstrings",
    "flake8-simplify",
    "flake8-sphinx-links",
    "flake8-warnings",
    "mypy >= 1.17.0",
    "pep8-naming",
    "pre-commit >= 4.0.0",
    "pylint >= 3.3.0",
    "pytest >= 8.4.0",
    "pytest-sugar >= 1.0.0",
    "sphinx-rtd-theme >= 1.5.0"
]

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
    'Documentation = "https://mocksafe.readthedocs.io/en/{version}/"'
]
"mocksafe/__init__.py" = ['__version__ = "{version}"']
"README.rst" = [
    'MockSafe v{version}',
    '`Library Usage <https://mocksafe.readthedocs.io/en/{version}/usage.html>`_',
    ':Docs:    `Read The Docs <https://mocksafe.readthedocs.io/en/{version}/>`_'
]
